--- a/webroot/adm/site.html
+++ b/webroot/adm/site.html
@@ -18,6 +18,8 @@
     <input type="text" id="siteName" name="siteName">
     <label for="siteId">Site Id:</label>
     <input type="text" id="siteId" name="siteId">
+    <label for="description">Description:</label>
+    <input type="text" id="description" name="description">
     <label for="types">Client Types:</label>
     <input type="text" id="types" name="types">
 </div>
@@ -37,8 +39,11 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Site</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Site</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doDisable">Disable Site</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetDescription">Set Description</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetTypes">Set Types</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doDomainNames">Set Site Domain Names</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetVisible">Set Visible</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetNotVisible">Set Not Visible</a></li>
 </ul>
 
 <br>
@@ -101,6 +106,32 @@
             const payload = { domain_names: domainNames }
 
             doApiCall('POST', url, '#standardOutput', '#errorOutput', JSON.stringify(payload));
+        });
+
+        $('#doSetDescription').on('click', function () {
+            var siteId = encodeURIComponent($('#siteId').val());
+
+            var description = encodeURIComponent($('#description').val());
+
+            var url = '/api/site/update?id=' + siteId + '&description=' + description;
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSetVisible').on('click', function () {
+            var siteId = encodeURIComponent($('#siteId').val());
+
+            var url = '/api/site/update?id=' + siteId + '&visible=true';
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
+        });
+
+        $('#doSetNotVisible').on('click', function () {
+            var siteId = encodeURIComponent($('#siteId').val());
+
+            var url = '/api/site/update?id=' + siteId + '&visible=false';
+
+            doApiCall('POST', url, '#standardOutput', '#errorOutput');
         });
     });
 </script>
