--- a/webroot/adm/service-links.html
+++ b/webroot/adm/service-links.html
@@ -90,8 +90,8 @@
             const serviceId = parseInt($('#serviceId').val())
             const siteId = parseInt($('#siteId').val())
             const linkName = $('#linkName').val()
-            if(!siteId || !serviceId) {
-                $('#errorOutput').text("required parameters: service_id, site_id")
+            if(!siteId || !serviceId || !linkId) {
+                $('#errorOutput').text("required parameters: link_id, service_id, site_id")
                 return
             }
             const roles = ($('#roles').val()).replace(/\s+/g, '').split(',').filter( (value, _, __) => value !== "");
