--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -52,7 +52,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetSite">Update Site</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doRename">Rename Client Site</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doRename">Rename Client Key</a></li>
 </ul>
 
 
