--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -22,7 +22,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doMeta">Get Metadata</a></li>
 </ul>
 
-<h3>Inputs</h3>
+<h3>Operations</h3>
 
 <label for="clientName">Name:</label>
 <input type="text" id="clientName" name="clientName">
@@ -35,13 +35,13 @@
 <br>
 <br>
 
-<h3>New Key</h3>
+<h4>New Key</h4>
 <ul>
     <li class="ro-cki" style="display: none"><a href="#" id="doAdd">Add Client Key</a></li>
 </ul>
 
 
-<h3>Operations on Existing Key</h3>
+<h4>Existing Key</h4>
 
 <label for="clientContact">Contact:</label>
 <input type="text" id="clientContact" name="clientContact">
@@ -55,7 +55,7 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doRename">Rename Client Key</a></li>
 </ul>
 
-<h4>Low Level</h4>
+<h5>Low Level Operations - Do Not Use Unless Necessary</h5>
 <ul>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetContact">Set Contact</a></li>
 </ul>
