Changed wording of message

--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -174,7 +174,7 @@
                 return;
             }
 
-            if (!confirm("Are you sure you want to rename the key to: " + newClientName)) {
+            if (!confirm("Are you sure you want to rename the key with contact: " + clientContact + " to: " + newClientName)) {
                 return;
             }
 
