--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -30,7 +30,7 @@
     <li>
         <form id="searchByContactForm">
             <label for="searchByContact">Contact:</label>
-            <input type="text" id="searchByContact" name="searchContact">
+            <input type="text" id="searchByContact" name="searchByContact">
             <button type="button" id="searchContact">Search Key by Contact</button>
         </form>
     </li>
