--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -59,7 +59,8 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doDisable">Disable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doSetSiteAndServiceId">Update Site ID and Service ID</a></li>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetSiteAndServiceId">Update Site ID and Service ID</a>
+    </li>
     <li class="ro-cki" style="display: none"><a href="#" id="doRename">Rename Client Key</a></li>
 </ul>
 
@@ -80,7 +81,7 @@
 
         $('#searchSiteId').on('click', function () {
             if(!$('#searchBySiteId').val()) {
-                $('#errorOutput').html("Required Parameters: site_id")
+                $('#errorOutput').html("Required Parameter: site_id")
                 return;
             }
             doApiCall('GET', '/api/client/list/' + $('#searchSiteId').val(), '#standardOutput', '#errorOutput');
@@ -88,7 +89,7 @@
 
         $('#searchKeyId').on('click', function () {
             if(!$('#searchByKeyId').val()) {
-                $('#errorOutput').html("Required Parameters: key_id")
+                $('#errorOutput').html("Required Parameter: key_id")
                 return;
             }
             doApiCall('GET', '/api/client/keyId?keyId=' + $('#searchByKeyId').val(), '#standardOutput', '#errorOutput');
@@ -96,7 +97,7 @@
 
         $('#searchContact').on('click', function () {
             if(!$('#searchByContact').val()) {
-                $('#errorOutput').html("Required Parameters: key_id")
+                $('#errorOutput').html("Required Parameter: contact")
                 return;
             }
             doApiCall('GET', '/api/client/contact?contact=' + $('#searchByContact').val(), '#standardOutput', '#errorOutput');
