--- a/webroot/adm/client-key.html
+++ b/webroot/adm/client-key.html
@@ -59,7 +59,8 @@
     <li class="ro-cki" style="display: none"><a href="#" id="doDisable">Disable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doEnable">Enable Client Key</a></li>
     <li class="ro-cki" style="display: none"><a href="#" id="doSetRoles">Set Roles</a></li>
-    <li class="ro-cki" style="display: none"><a href="#" id="doSetSiteAndServiceId">Update Site ID and Service ID</a>
+    <li class="ro-cki" style="display: none"><a href="#" id="doSetSiteAndServiceId">
+        Update Site ID and Service ID</a>
     </li>
     <li class="ro-cki" style="display: none"><a href="#" id="doRename">Rename Client Key</a></li>
 </ul>
