--- a/webroot/index.html
+++ b/webroot/index.html
@@ -19,6 +19,10 @@ Logged in as <span id="loginEmail"></span>
 </div>
 
 <ul>
+    <li class="ro-adm" style="display: none"><a href="/adm/oncall.html">On-call Support Workflow</a></li>
+</ul>
+
+<ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/site.html">Site Management</a></li>
     <li class="ro-adm" style="display: none"><a href="/adm/client-side-keypairs.html">Client Side Keypair Management</a></li>
 </ul>
