Renamed oncall.html to oncall-support-workflow.html

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -19,7 +19,7 @@ Logged in as <span id="loginEmail"></span>
 </div>
 
 <ul>
-    <li class="ro-adm" style="display: none"><a href="/adm/oncall.html">On-call Support Workflow</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/oncall-support-workflow.html">On-call Support Workflow</a></li>
 </ul>
 
 <ul>
