Updated admin UI page titles

--- a/webroot/adm/enclave-gcp.html
+++ b/webroot/adm/enclave-gcp.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <h1>UID2 Admin - GCP Enclave ID Tool</h1>
+  <h1>UID2 Env - GCP Enclave ID Tool</h1>
 
   <a href="/">Back</a>
 
