--- a/webroot/adm/services.html
+++ b/webroot/adm/services.html
@@ -4,7 +4,7 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin - Service Management</h1>
+<h1>UID2 Env - Service Management</h1>
 
 <a href="/">Back</a>
 
