--- a/webroot/adm/enclave-gcp-v2.html
+++ b/webroot/adm/enclave-gcp-v2.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<h1>UID2 Admin - GCP Enclave ID Tool(V2)</h1>
+<h1>UID2 Env - GCP Enclave ID Tool(V2)</h1>
 
 <a href="/">Back</a>
 
