--- a/webroot/adm/oncall-support-workflow.html
+++ b/webroot/adm/oncall-support-workflow.html
@@ -4,7 +4,7 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin - On-call Support Workflow</h1>
+<h1>UID2 Env - On-call Support Workflow</h1>
 
 <a href="/">Back</a>
 
