--- a/webroot/index.html
+++ b/webroot/index.html
@@ -4,7 +4,7 @@
     <script src="/js/main.js"></script>
 </head>
 <body>
-<h1>UID2 Admin Site</h1>
+<h1>UID2 Env Admin Site</h1>
 
 <div class="notauthed" style="display: none">
 <a href="/login">Login</a>
