--- a/webroot/index.html
+++ b/webroot/index.html
@@ -18,9 +18,12 @@ Logged in as <span id="loginEmail"></span>
 <br>
 </div>
 
+<h3>On-call Support Workflow</h3>
 <ul>
-    <li class="ro-adm" style="display: none"><a href="/adm/oncall-support-workflow.html">On-call Support Workflow</a></li>
+    <li class="ro-adm" style="display: none"><a href="/adm/oncall/generate-api-key-secret.html">Generate API Key/Secret</a></li>
 </ul>
+
+<hr>
 
 <ul>
     <li class="ro-cki ro-adm" style="display: none"><a href="/adm/site.html">Site Management</a></li>
