Updated participant search in generate API key/secret flow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -2,6 +2,13 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="/js/main.js"></script>
+
+    <style>
+        table, th, td {
+            border: 1px solid;
+            vertical-align: top;
+        }
+    </style>
 </head>
 <body>
 <h1>UID2 Env - On-call - Generate API Key/Secret</h1>
@@ -11,42 +18,83 @@
 <br>
 <br>
 
-<h3>Please input the participant's name.</h3>
-<label for="participantName">Name:</label>
-<input type="text" id="participantName" name="participantName">
-<a href="#" id="searchParticipant">Search</a>
+<div class="ro-adm" style="display: none">
+    <h3>Please input the participant's name.</h3>
+    <label for="participantName">Name:</label>
+    <input type="text" id="participantName" name="participantName">
+    <a href="#" id="searchParticipant">Search</a>
 
-<br>
+    <br>
+    <br>
 
-<pre id="siteSearchOutput"></pre>
+    <table id="searchTable" style="display: none">
+        <tr>
+            <th>Sites</th>
+            <th>Clients</th>
+        </tr>
+        <tr>
+            <td>
+                <pre id="siteSearchOutput"></pre>
+                <pre id="siteSearchErrorOutput"></pre>
+            </td>
+            <td>
+                <pre id="clientSearchOutput"></pre>
+                <pre id="clientSearchErrorOutput"></pre>
+            </td>
+        </tr>
+    </table>
 
-<br>
+    <br>
+    <br>
 
-<h3>Output</h3>
-
-<div id="output">
-    <pre id="errorOutput"></pre>
-    <pre id="standardOutput"></pre>
+    <div id="create" style="display: none">
+        <h3>Didn't find what you were looking for?</h3>
+        <ul>
+            <li><a href="#create" id="createSite">Create site</a></li>
+            <li><a href="#create" id="createClient">Create client</a></li>
+        </ul>
+    </div>
 </div>
 
 <script language="JavaScript">
-    let similarSiteList = [];
-
     $(document).ready(() => {
+        let similarSiteList = [];
+        let similarClientList = [];
+
         $("#searchParticipant").on("click", () => {
+            $("searchTable").hide();
+            $("#create").hide();
+
             const participantName = encodeURIComponent($("#participantName").val());
 
-            doApiCallWithCallback("GET", "/api/site/list", text => {
-                const siteList = JSON.parse(text);
+            $.when(
+                doApiCallWithCallback("GET", "/api/site/list", text => {
+                    const siteList = JSON.parse(text);
 
-                similarSiteList = siteList.filter(s => s.name.toLowerCase().includes(participantName.toLowerCase()));
+                    similarSiteList = siteList.filter(s => s.name.toLowerCase().includes(participantName.toLowerCase()));
 
-                if (similarSiteList.length > 0) {
-                    $(siteSearchOutput).text(JSON.stringify(similarSiteList, null, 2));
-                } else {
-                    $(siteSearchOutput).text("No sites found");
-                }
-            }, errorCallback)
+                    if (similarSiteList.length > 0) {
+                        $(siteSearchOutput).text(JSON.stringify(similarSiteList, null, 2));
+                    } else {
+                        $(siteSearchOutput).text("No sites found");
+                    }
+                }, err => standardErrorCallback(err, "#siteSearchErrorOutput")),
+                doApiCallWithCallback("GET", "/api/client/list", text => {
+                    const clientList = JSON.parse(text);
+
+                    similarClientList = clientList.filter(c => c.name.toLowerCase().includes(participantName.toLowerCase()));
+
+                    if (similarClientList.length > 0) {
+                        $(clientSearchOutput).text(JSON.stringify(similarClientList, null, 2));
+                    } else {
+                        $(clientSearchOutput).text("No clients found");
+                    }
+                }, err => standardErrorCallback(err, "#clientSearchErrorOutput"))
+            )
+            .then((r1, r2) => {
+                $("#searchTable").show();
+                $("#create").show();
+            });
         });
     });
 </script>
