Added multiple checkboxes for site client type in oncall workflow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -42,18 +42,44 @@
                 <pre id="clientSearchErrorOutput"></pre>
             </td>
         </tr>
+        <tr>
+            <td id="create" colspan="2" style="text-align: center">
+                <h3>Didn't find what you were looking for?</h3>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="siteName">Name</label>
+                <input type="text" id="siteName" name="siteName">
+                <br>
+                <label for="siteDescription">Description (Optional)</label>
+                <input type="text" id="siteDescription" name="siteDescription">
+                <br>
+                Client Types
+                <div>
+                    <input type="checkbox" id="siteClientTypes-DSP" name="siteClientTypes[]" value="DSP">
+                    <label for="siteClientTypes-DSP">DSP</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="siteClientTypes-ADVERTISER" name="siteClientTypes[]" value="ADVERTISER">
+                    <label for="siteClientTypes-ADVERTISER">ADVERTISER</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="siteClientTypes-DATA_PROVIDER" name="siteClientTypes[]" value="DATA_PROVIDER">
+                    <label for="siteClientTypes-DATA_PROVIDER">DATA_PROVIDER</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="siteClientTypes-PUBLISHER" name="siteClientTypes[]" value="PUBLISHER">
+                    <label for="siteClientTypes-PUBLISHER">PUBLISHER</label>
+                </div>
+
+                <br>
+
+                <a href="#create" id="createSite">Create site</a>
+            </td>
+            <td><a href="#create" id="createClient">Create client</a></td>
+        </tr>
     </table>
-
-    <br>
-    <br>
-
-    <div id="create" style="display: none">
-        <h3>Didn't find what you were looking for?</h3>
-        <ul>
-            <li><a href="#create" id="createSite">Create site</a></li>
-            <li><a href="#create" id="createClient">Create client</a></li>
-        </ul>
-    </div>
 </div>
 
 <script language="JavaScript">
@@ -95,6 +121,12 @@
                 $("#searchTable").show();
                 $("#create").show();
             });
+        });
+
+        $("#createSite").on("click", () => {
+            const name = encodeURIComponent($("#siteName").val());
+            const description = encodeURIComponent($("#siteDescription").val());
+            const clientTypes = $("input[name='siteClientTypes[]']:checked").map((_, el) => $(el).val()).get();
         });
     });
 </script>
