Combined search site and search client into shared function

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -84,38 +84,15 @@
 
 <script language="JavaScript">
     $(document).ready(() => {
-        let similarSiteList = [];
-        let similarClientList = [];
-
         $("#searchParticipant").on("click", () => {
-            $("searchTable").hide();
+            $("#searchTable").hide();
             $("#create").hide();
 
             const participantName = encodeURIComponent($("#participantName").val());
 
             $.when(
-                doApiCallWithCallback("GET", "/api/site/list", text => {
-                    const siteList = JSON.parse(text);
-
-                    similarSiteList = siteList.filter(s => s.name.toLowerCase().includes(participantName.toLowerCase()));
-
-                    if (similarSiteList.length > 0) {
-                        $(siteSearchOutput).text(JSON.stringify(similarSiteList, null, 2));
-                    } else {
-                        $(siteSearchOutput).text("No sites found");
-                    }
-                }, err => standardErrorCallback(err, "#siteSearchErrorOutput")),
-                doApiCallWithCallback("GET", "/api/client/list", text => {
-                    const clientList = JSON.parse(text);
-
-                    similarClientList = clientList.filter(c => c.name.toLowerCase().includes(participantName.toLowerCase()));
-
-                    if (similarClientList.length > 0) {
-                        $(clientSearchOutput).text(JSON.stringify(similarClientList, null, 2));
-                    } else {
-                        $(clientSearchOutput).text("No clients found");
-                    }
-                }, err => standardErrorCallback(err, "#clientSearchErrorOutput"))
+                search("site", participantName),
+                search("client", participantName)
             )
             .then((r1, r2) => {
                 $("#searchTable").show();
@@ -128,6 +105,21 @@
             const description = encodeURIComponent($("#siteDescription").val());
             const clientTypes = $("input[name='siteClientTypes[]']:checked").map((_, el) => $(el).val()).get();
         });
+
+        const search = (type, participantName) => {
+            doApiCallWithCallback("GET", `/api/${type}/list`, text => {
+                    const searchList = JSON.parse(text);
+
+                    similarList = searchList.filter(s => s.name.toLowerCase().includes(participantName.toLowerCase()));
+                    if (similarList.length === 0) {
+                        $(`#${type}SearchOutput`).text("No results");
+                    } else {
+                        $(`#${type}SearchOutput`).text(JSON.stringify(similarList, null, 2));
+                    }
+                }, err => {
+                    standardErrorCallback(err, `#${type}SearchErrorOutput`);
+                });
+        }
     });
 </script>
 
