Finished create site flow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -27,7 +27,7 @@
     <br>
     <br>
 
-    <table id="searchTable" style="display: none">
+    <table id="searchTable">
         <tr>
             <th>Sites</th>
             <th>Clients</th>
@@ -49,13 +49,12 @@
         </tr>
         <tr>
             <td>
-                <label for="siteName">Name</label>
+                <label for="siteName">Name:</label>
                 <input type="text" id="siteName" name="siteName">
+
                 <br>
-                <label for="siteDescription">Description (Optional)</label>
-                <input type="text" id="siteDescription" name="siteDescription">
-                <br>
-                Client Types
+
+                Client Types:
                 <div>
                     <input type="checkbox" id="siteClientTypes-DSP" name="siteClientTypes[]" value="DSP">
                     <label for="siteClientTypes-DSP">DSP</label>
@@ -73,6 +72,10 @@
                     <label for="siteClientTypes-PUBLISHER">PUBLISHER</label>
                 </div>
 
+                <label for="siteDescription">Description (Optional):</label>
+                <input type="text" id="siteDescription" name="siteDescription">
+
+                <br>
                 <br>
 
                 <a href="#create" id="createSite">Create site</a>
@@ -85,40 +88,44 @@
 <script language="JavaScript">
     $(document).ready(() => {
         $("#searchParticipant").on("click", () => {
-            $("#searchTable").hide();
-            $("#create").hide();
-
-            const participantName = encodeURIComponent($("#participantName").val());
+            const name = encodeURIComponent($("#participantName").val());
 
             $.when(
-                search("site", participantName),
-                search("client", participantName)
+                search("site", name),
+                search("client", name)
             )
-            .then((r1, r2) => {
-                $("#searchTable").show();
-                $("#create").show();
-            });
+            .then((r1, r2) => {});
         });
 
         $("#createSite").on("click", () => {
+            $(`#siteSearchOutput`).text("");
+            $(`#siteSearchErrorOutput`).text("");
+
             const name = encodeURIComponent($("#siteName").val());
+            const clientTypes = $("input[name='siteClientTypes[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
             const description = encodeURIComponent($("#siteDescription").val());
-            const clientTypes = $("input[name='siteClientTypes[]']:checked").map((_, el) => $(el).val()).get();
+            const url = "/api/site/add?name=" + name + "&types=" + clientTypes + "&description=" + description;
+
+            doApiCallWithCallback("POST", url, (text) => {
+                $("#siteSearchOutput").text(JSON.stringify(JSON.parse(text), null, 2));
+                window.alert(`Created site for ${name}`);
+            }, (err) => standardErrorCallback(err, `#siteSearchErrorOutput`));
         });
 
-        const search = (type, participantName) => {
-            doApiCallWithCallback("GET", `/api/${type}/list`, text => {
+        const search = (type, name) => {
+            $(`#${type}SearchOutput`).text("");
+            $(`#${type}SearchErrorOutput`).text("");
+
+            doApiCallWithCallback("GET", `/api/${type}/list`, (text) => {
                     const searchList = JSON.parse(text);
 
-                    similarList = searchList.filter(s => s.name.toLowerCase().includes(participantName.toLowerCase()));
+                    similarList = searchList.filter(s => s.name.toLowerCase().includes(name.toLowerCase()));
                     if (similarList.length === 0) {
                         $(`#${type}SearchOutput`).text("No results");
                     } else {
                         $(`#${type}SearchOutput`).text(JSON.stringify(similarList, null, 2));
                     }
-                }, err => {
-                    standardErrorCallback(err, `#${type}SearchErrorOutput`);
-                });
+                }, (err) => standardErrorCallback(err, `#${type}SearchErrorOutput`));
         }
     });
 </script>
