Added create client in oncall workflow

--- a/webroot/adm/oncall/generate-api-key-secret.html
+++ b/webroot/adm/oncall/generate-api-key-secret.html
@@ -80,7 +80,38 @@
 
                 <a href="#create" id="createSite">Create site</a>
             </td>
-            <td><a href="#create" id="createClient">Create client</a></td>
+            <td>
+                <label for="clientName">Name:</label>
+                <input type="text" id="clientName" name="clientName">
+
+                <br>
+
+                Roles:
+                <div>
+                    <input type="checkbox" id="clientRoles-GENERATOR" name="clientRoles[]" value="GENERATOR">
+                    <label for="clientRoles-GENERATOR">GENERATOR - for publishers</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="clientRoles-MAPPER" name="clientRoles[]" value="MAPPER">
+                    <label for="clientRoles-MAPPER">MAPPER - for advertisers, data providers</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="clientRoles-ID_READER" name="clientRoles[]" value="ID_READER">
+                    <label for="clientRoles-ID_READER">ID_READER - for DSPs</label>
+                </div>
+                <div>
+                    <input type="checkbox" id="clientRoles-SHARER" name="clientRoles[]" value="SHARER">
+                    <label for="clientRoles-SHARER">SHARER</label>
+                </div>
+
+                <label for="clientSiteId">Site ID:</label>
+                <input type="text" id="clientSiteId" name="clientSiteId">
+
+                <br>
+                <br>
+
+                <a href="#create" id="createClient">Create client</a>
+            </td>
         </tr>
     </table>
 </div>
@@ -108,8 +139,23 @@
 
             doApiCallWithCallback("POST", url, (text) => {
                 $("#siteSearchOutput").text(JSON.stringify(JSON.parse(text), null, 2));
-                window.alert(`Created site for ${name}`);
+                window.alert(`Created site for [${name}]`);
             }, (err) => standardErrorCallback(err, `#siteSearchErrorOutput`));
+        });
+
+        $("#createClient").on("click", () => {
+            $(`#clientSearchOutput`).text("");
+            $(`#clientSearchErrorOutput`).text("");
+
+            const name = encodeURIComponent($("#clientName").val());
+            const roles = $("input[name='clientRoles[]']:checked").map((_, el) => encodeURIComponent($(el).val())).get().join(",");
+            const siteId = encodeURIComponent($("#clientSiteId").val());
+            const url = "/api/client/add?name=" + name + "&roles=" + roles + "&site_id=" + siteId + "&service_id=0";
+
+            doApiCallWithCallback("POST", url, (text) => {
+                $("#clientSearchOutput").text(JSON.stringify(JSON.parse(text), null, 2));
+                window.alert(`Created API key for [${decodeURIComponent(name)}] under site ID [${siteId}]`);
+            }, (err) => standardErrorCallback(err, `#clientSearchErrorOutput`));
         });
 
         const search = (type, name) => {
